--- a/package.json
+++ b/package.json
@@ -21,27 +21,32 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:coverage": "react-scripts test --coverage --watchAll=false",
-    "test:watch": "react-scripts test --coverage --watchAll"
+    "eject": "react-scripts eject",
+    "test:coverage": "react-scripts test --coverage",
+    "lint": "eslint src --ext .js,.jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:stats": "eslint src --ext .js,.jsx --format json-with-metadata > lint-stats.json",
+    "lint:check": "eslint --ext .js,.jsx  --format table --max-warnings 0 || exit 0"
   },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}",
-      "!src/index.js",
-      "!src/reportWebVitals.js",
-      "!src/**/*.stories.{js,jsx}"
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
     ],
-    "coverageThreshold": {
-      "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
-      }
-    }
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
-  "eject": "react-scripts eject",
-  "lint": "eslint src --ext .js,.jsx --report-unused-disable-directives --max-warnings 0",
-  "lint:stats": "eslint src --ext .js,.jsx --format json-with-metadata > lint-stats.json",
-  "lint:check": "eslint --ext .js,.jsx  --format table --max-warnings 0 || exit 0"
+  "devDependencies": {
+    "eslint-formatter-table": "^7.32.1",
+    "jest-styled-components": "^7.2.0"
+  }
 }
